--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -1,7 +1,7 @@
-app.folder=F:\\clip\\server-out
+app.folder=F:\\github\\jframe\\_local deployment
 app.host=http://localhost:17006
 app.isTestServer=true
 app.showFullError=true
 app.printLogs=true
-app.images.folder.original=F:\\clip\\server-out\\__uploaded-image-originals
-app.images.folder.sizes=F:\\clip\\server-out\\__uploaded-image-sizes
+app.images.folder.original=F:\\github\\jframe\\_local deployment\\_uploaded-image-originals
+app.images.folder.sizes=F:\\github\\jframe\\_local deployment\\_uploaded-image-sizes
