--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>commons-digester</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
 
 
         <dependency>
