--- a/99.jframe-web-main/pom.xml
+++ b/99.jframe-web-main/pom.xml
@@ -9,6 +9,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jframe-web-main</artifactId>
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
