--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -1,7 +1,128 @@
-app.folder=F:\\github\\jframe\\_deployment
-app.host=http://localhost:17006
+
+app.serverName=dev_local
 app.isTestServer=true
-app.showFullError=true
-app.printLogs=true
-app.images.folder.original=F:\\github\\jframe\\_deployment\\_uploaded-image-originals
-app.images.folder.sizes=F:\\github\\jframe\\_deployment\\_uploaded-image-sizes
+app.host=http://localhost:17007
+app.redisKeyPrefix=dev_local
+app.logsDbName=dev_local_logs
+app.cdnHostOfImages=http://images.dev.yourdomain.com
+app.cookieDomain=localhost
+app.authCookieName=.JFRAMEAUTH
+app.authCookieExpireMinutes=525600
+app.sessionExpireSeconds=1800
+app.printStackTrace=true
+app.mock=false
+
+weixin.wpk.appId=abc
+weixin.wpk.appSecret=abc
+weixin.wpk.messageToken=abc
+weixin.wpk.messageAesKey=abc
+weixin.pay.appId=abc
+weixin.pay.mchId=abc
+weixin.pay.key=abc
+weixin.pay.certFilePath=abc
+weixin.pay.clientIp=127.0.0.1
+weixin.pay.httpConnectTimeoutMs=30000
+weixin.pay.httpReadTimeoutMs=30000
+
+applet.party.appId=abc
+applet.party.appSecret=abc
+applet.party.messageToken=abc
+applet.party.messageAesKey=abc
+
+applet.ibuy.appId=abc
+applet.ibuy.appSecret=abc
+applet.ibuy.messageToken=abc
+applet.ibuy.messageAesKey=abc
+applet.pay.ibuy.appId=abc
+applet.pay.ibuy.mchId=abc
+applet.pay.ibuy.key=abc
+applet.pay.ibuy.certFilePath=abc
+applet.pay.ibuy.clientIp=127.0.0.1
+applet.pay.ibuy.httpConnectTimeoutMs=30000
+applet.pay.ibuy.httpReadTimeoutMs=30000
+
+mongo.address=127.0.0.1
+mongo.port=27017
+mongo.database=admin
+mongo.username=root
+mongo.password=password
+
+redis.address=127.0.0.1
+redis.port=40341
+redis.timeoutSeconds=30
+redis.password=password
+
+aliyun.mq.default.topic=主题名称
+aliyun.mq.default.onsAddr=http://onsaddr-internet.aliyun.com/rocketmq/nsaddr4client-internet    
+aliyun.mq.default.producerId=PID开头的生产者ID
+aliyun.mq.default.key=
+aliyun.mq.default.secret=
+
+alipay.mobile.url=https://openapi.alipay.com/gateway.do
+alipay.mobile.appid=
+alipay.mobile.charset=UTF-8
+alipay.mobile.format=json
+alipay.mobile.signtype=RSA2
+alipay.mobile.RSA_PRIVATE_KEY=
+alipay.mobile.ALIPAY_PUBLIC_KEY=
+
+
+aliyun.oss.images.key=分配到该OSS的用户的key(accessKey)
+aliyun.oss.images.secret=分配到该OSS的用户的secret
+aliyun.oss.images.bucketName=
+aliyun.oss.images.endPoint=http://oss-cn-hangzhou.aliyuncs.com
+
+aliyun.oss.internal.key=分配到该OSS的用户的key(accessKey)
+aliyun.oss.internal.secret=分配到该OSS的用户的secret
+aliyun.oss.internal.bucketName=
+aliyun.oss.internal.endPoint=http://oss-cn-hangzhou.aliyuncs.com
+
+aliyun.oss.public.key=分配到该OSS的用户的key(accessKey)
+aliyun.oss.public.secret=分配到该OSS的用户的secret
+aliyun.oss.public.bucketName=
+aliyun.oss.public.endPoint=http://oss-cn-hangzhou.aliyuncs.com
+
+aliyun.sms.key=分配到该短信服务的用户的key(accessKey)
+aliyun.sms.secret=分配到该短信服务的用户的secret
+aliyun.sms.signName=短信模板签名
+aliyun.sms.templates.findPassword=找回密码短信的模板ID
+aliyun.sms.templates.login=登录短信的模板ID
+aliyun.sms.templates.register=注册短信的模板ID
+aliyun.sms.templates.resetPayPassword=重置支付密码短信的模板ID
+aliyun.sms.templates.generalCaptcha=通用验证码短信的模板ID
+
+
+## 以下为银联支付配置 #######################################################
+
+unionpay.merId=商户号
+unionpay.frontReturnUrl=https://www.yourdomain.com/app/unionpay/front-return
+unionpay.backNotifyUrl=https://www.yourdomain.com/app/unionpay/back-notify
+unionpay.isEncrypted=false
+unionpay.trId=62000000001
+
+acpsdk.frontTransUrl=https://gateway.test.95516.com/gateway/api/frontTransReq.do
+acpsdk.backTransUrl=https://gateway.test.95516.com/gateway/api/backTransReq.do
+acpsdk.singleQueryUrl=https://gateway.test.95516.com/gateway/api/queryTrans.do
+acpsdk.batchTransUrl=https://gateway.test.95516.com/gateway/api/batchTrans.do
+acpsdk.fileTransUrl=https://filedownload.test.95516.com/
+acpsdk.appTransUrl=https://gateway.test.95516.com/gateway/api/appTransReq.do
+acpsdk.cardTransUrl=https://gateway.test.95516.com/gateway/api/cardTransReq.do
+
+acpsdk.version=5.1.0
+acpsdk.signMethod=01
+
+# 是否验证验签证书的CN，测试环境请设置false，生产环境请设置true。非false的值默认都当true处理。
+acpsdk.ifValidateCNName=false
+
+# 是否验证https证书，测试环境请设置false，生产环境建议优先尝试true，不行再false。非true的值默认都当false处理。
+acpsdk.ifValidateRemoteCert=false
+
+acpsdk.signCert.path=F:/unionpay-test-certs/acp_test_sign.pfx
+acpsdk.encryptCert.path=F:/unionpay-test-certs/acp_test_enc.cer
+acpsdk.middleCert.path=F:/unionpay-test-certs/acp_test_middle.cer
+acpsdk.rootCert.path=F:/unionpay-test-certs/acp_test_root.cer
+acpsdk.signCert.pwd=000000
+acpsdk.signCert.type=PKCS12
+
+
+#################################################################################################
