--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -11,11 +11,13 @@ app.authCookieExpireMinutes=525600
 app.sessionExpireSeconds=1800
 app.printStackTrace=true
 app.mock=false
+app.entityPackage=org.jframe.data.entities
 
-weixin.wpk.appId=abc
-weixin.wpk.appSecret=abc
-weixin.wpk.messageToken=abc
-weixin.wpk.messageAesKey=abc
+weixin.jframe.appId=abc
+weixin.jframe.appSecret=abc
+weixin.jframe.messageToken=abc
+weixin.jframe.messageAesKey=abc
+
 weixin.pay.appId=abc
 weixin.pay.mchId=abc
 weixin.pay.key=abc
@@ -24,22 +26,18 @@ weixin.pay.clientIp=127.0.0.1
 weixin.pay.httpConnectTimeoutMs=30000
 weixin.pay.httpReadTimeoutMs=30000
 
-applet.party.appId=abc
-applet.party.appSecret=abc
-applet.party.messageToken=abc
-applet.party.messageAesKey=abc
+applet.demo.appId=abc
+applet.demo.appSecret=abc
+applet.demo.messageToken=abc
+applet.demo.messageAesKey=abc
 
-applet.ibuy.appId=abc
-applet.ibuy.appSecret=abc
-applet.ibuy.messageToken=abc
-applet.ibuy.messageAesKey=abc
-applet.pay.ibuy.appId=abc
-applet.pay.ibuy.mchId=abc
-applet.pay.ibuy.key=abc
-applet.pay.ibuy.certFilePath=abc
-applet.pay.ibuy.clientIp=127.0.0.1
-applet.pay.ibuy.httpConnectTimeoutMs=30000
-applet.pay.ibuy.httpReadTimeoutMs=30000
+applet.pay.demo.appId=abc
+applet.pay.demo.mchId=abc
+applet.pay.demo.key=abc
+applet.pay.demo.certFilePath=abc
+applet.pay.demo.clientIp=127.0.0.1
+applet.pay.demo.httpConnectTimeoutMs=30000
+applet.pay.demo.httpReadTimeoutMs=30000
 
 mongo.address=127.0.0.1
 mongo.port=27017
