--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -1,5 +1,6 @@
 
 app.serverName=dev_local
+app.isDeveloperMode=true
 app.isTestServer=true
 app.host=http://localhost:17007
 app.redisKeyPrefix=dev_local
