--- a/99.jframe-web-main/pom.xml
+++ b/99.jframe-web-main/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>org.jframe</groupId>
+            <artifactId>jframe-web-pc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jframe</groupId>
             <artifactId>jframe-web-demo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
