--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>52.jframe-web-admin</module>
         <module>53.jframe-web-api</module>
         <module>99.jframe-web-main</module>
+        <module>51.jframe-web-pc</module>
+        <module>21.jframe-services-pc</module>
 
     </modules>
     <packaging>pom</packaging>
