--- a/99.jframe-web-main/pom.xml
+++ b/99.jframe-web-main/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>jframe-web-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jframe</groupId>
+            <artifactId>jframe-web-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
     <build>
