--- a/54.jframe-web-app/pom.xml
+++ b/54.jframe-web-app/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>jframe-web-app</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jframe</groupId>
+            <artifactId>jframe-services-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jframe</groupId>
+            <artifactId>jframe-web</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
