change hibernate cfg.xml to property

--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -14,6 +14,18 @@ app.printStackTrace=true
 app.mock=false
 app.entityPackage=org.jframe.data.entities
 
+hibernate.connection.driverClass=com.mysql.jdbc.Driver
+hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=false
+hibernate.connection.username=root
+hibernate.connection.password=111111
+hibernate.connection.poolSize=5
+hibernate.jdbc.fetchSize=50
+hibernate.jdbc.batchSize=23
+hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+hibernate.currentSessionContextClass=thread
+hibernate.showSql=true
+hibernate.hbm2ddl.auto=update
+
 weixin.jframe.appId=abc
 weixin.jframe.appSecret=abc
 weixin.jframe.messageToken=abc
