add mq consumer

--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -1,4 +1,4 @@
-
+##common
 app.serverName=dev_local
 app.isDeveloperMode=true
 app.isTestServer=true
@@ -13,7 +13,7 @@ app.sessionExpireSeconds=1800
 app.printStackTrace=true
 app.mock=false
 app.entityPackage=org.jframe.data.entities
-
+##hibernate
 hibernate.connection.driverClass=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=false
 hibernate.connection.username=root
@@ -25,12 +25,12 @@ hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 hibernate.currentSessionContextClass=thread
 hibernate.showSql=true
 hibernate.hbm2ddl.auto=update
-
+##weixin mp
 weixin.jframe.appId=abc
 weixin.jframe.appSecret=abc
 weixin.jframe.messageToken=abc
 weixin.jframe.messageAesKey=abc
-
+##weixin pay
 weixin.pay.appId=abc
 weixin.pay.mchId=abc
 weixin.pay.key=abc
@@ -38,12 +38,12 @@ weixin.pay.certFilePath=abc
 weixin.pay.clientIp=127.0.0.1
 weixin.pay.httpConnectTimeoutMs=30000
 weixin.pay.httpReadTimeoutMs=30000
-
+##wexin applet
 applet.demo.appId=abc
 applet.demo.appSecret=abc
 applet.demo.messageToken=abc
 applet.demo.messageAesKey=abc
-
+##applet pay
 applet.pay.demo.appId=abc
 applet.pay.demo.mchId=abc
 applet.pay.demo.key=abc
@@ -51,24 +51,25 @@ applet.pay.demo.certFilePath=abc
 applet.pay.demo.clientIp=127.0.0.1
 applet.pay.demo.httpConnectTimeoutMs=30000
 applet.pay.demo.httpReadTimeoutMs=30000
-
-mongo.address=47.96.19.106
+##mogodb
+mongo.address=127.0.0.1
 mongo.port=27017
 mongo.database=admin
 mongo.username=root
-mongo.password=JT5231QjHSrt
-
-redis.address=47.96.19.106
+mongo.password=password
+##redis
+redis.address=127.0.0.1
 redis.port=40341
 redis.timeoutSeconds=30
-redis.password=J9Gpv4fA
-
+redis.password=password
+##aliyun mq
 aliyun.mq.default.topic=主题名称
 aliyun.mq.default.onsAddr=http://onsaddr-internet.aliyun.com/rocketmq/nsaddr4client-internet    
-aliyun.mq.default.producerId=PID开头的生产者ID
-aliyun.mq.default.key=
-aliyun.mq.default.secret=
-
+aliyun.mq.default.producerId=PID
+aliyun.mq.default.consumerId=CID
+aliyun.mq.default.key=abc
+aliyun.mq.default.secret=abc
+##alipay
 alipay.mobile.url=https://openapi.alipay.com/gateway.do
 alipay.mobile.appid=
 alipay.mobile.charset=UTF-8
@@ -76,23 +77,23 @@ alipay.mobile.format=json
 alipay.mobile.signtype=RSA2
 alipay.mobile.RSA_PRIVATE_KEY=
 alipay.mobile.ALIPAY_PUBLIC_KEY=
-
-
+##aliyun oss
+#iamges
 aliyun.oss.images.key=分配到该OSS的用户的key(accessKey)
 aliyun.oss.images.secret=分配到该OSS的用户的secret
-aliyun.oss.images.bucketName=
+aliyun.oss.images.bucketName=abc
 aliyun.oss.images.endPoint=http://oss-cn-hangzhou.aliyuncs.com
-
+#internal
 aliyun.oss.internal.key=分配到该OSS的用户的key(accessKey)
 aliyun.oss.internal.secret=分配到该OSS的用户的secret
-aliyun.oss.internal.bucketName=
+aliyun.oss.internal.bucketName=abc
 aliyun.oss.internal.endPoint=http://oss-cn-hangzhou.aliyuncs.com
-
+#public
 aliyun.oss.public.key=分配到该OSS的用户的key(accessKey)
 aliyun.oss.public.secret=分配到该OSS的用户的secret
-aliyun.oss.public.bucketName=
+aliyun.oss.public.bucketName=abc
 aliyun.oss.public.endPoint=http://oss-cn-hangzhou.aliyuncs.com
-
+##aliyun sms
 aliyun.sms.key=分配到该短信服务的用户的key(accessKey)
 aliyun.sms.secret=分配到该短信服务的用户的secret
 aliyun.sms.signName=短信模板签名
@@ -101,16 +102,13 @@ aliyun.sms.templates.login=登录短信的模板ID
 aliyun.sms.templates.register=注册短信的模板ID
 aliyun.sms.templates.resetPayPassword=重置支付密码短信的模板ID
 aliyun.sms.templates.generalCaptcha=通用验证码短信的模板ID
-
-
-## 以下为银联支付配置 #######################################################
-
+##unionpay
 unionpay.merId=商户号
 unionpay.frontReturnUrl=https://www.yourdomain.com/app/unionpay/front-return
 unionpay.backNotifyUrl=https://www.yourdomain.com/app/unionpay/back-notify
 unionpay.isEncrypted=false
 unionpay.trId=62000000001
-
+#unionpay sdk
 acpsdk.frontTransUrl=https://gateway.test.95516.com/gateway/api/frontTransReq.do
 acpsdk.backTransUrl=https://gateway.test.95516.com/gateway/api/backTransReq.do
 acpsdk.singleQueryUrl=https://gateway.test.95516.com/gateway/api/queryTrans.do
@@ -118,22 +116,15 @@ acpsdk.batchTransUrl=https://gateway.test.95516.com/gateway/api/batchTrans.do
 acpsdk.fileTransUrl=https://filedownload.test.95516.com/
 acpsdk.appTransUrl=https://gateway.test.95516.com/gateway/api/appTransReq.do
 acpsdk.cardTransUrl=https://gateway.test.95516.com/gateway/api/cardTransReq.do
-
 acpsdk.version=5.1.0
 acpsdk.signMethod=01
-
 # 是否验证验签证书的CN，测试环境请设置false，生产环境请设置true。非false的值默认都当true处理。
 acpsdk.ifValidateCNName=false
-
 # 是否验证https证书，测试环境请设置false，生产环境建议优先尝试true，不行再false。非true的值默认都当false处理。
 acpsdk.ifValidateRemoteCert=false
-
 acpsdk.signCert.path=F:/unionpay-test-certs/acp_test_sign.pfx
 acpsdk.encryptCert.path=F:/unionpay-test-certs/acp_test_enc.cer
 acpsdk.middleCert.path=F:/unionpay-test-certs/acp_test_middle.cer
 acpsdk.rootCert.path=F:/unionpay-test-certs/acp_test_root.cer
 acpsdk.signCert.pwd=000000
 acpsdk.signCert.type=PKCS12
-
-
-#################################################################################################
