--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -13,6 +13,7 @@ app.sessionExpireSeconds=1800
 app.printStackTrace=true
 app.mock=false
 app.entityPackage=org.jframe.data.entities
+app.fileLogPath=/_files
 
 hibernate.connection.driverClass=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=false
