refactor sms module

--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -13,6 +13,12 @@ app.sessionExpireSeconds=1800
 app.printStackTrace=true
 app.mock=false
 app.entityPackage=org.jframe.data.entities
+app.sms.ipLimit=1000
+app.sms.generalLimit=20
+app.sms.registerLimit=5
+app.sms.loginLimit=5
+app.sms.resetPasswordLimit=5
+app.sms.resetPayPasswordLimit=5
 ##hibernate
 hibernate.connection.driverClass=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=false
