--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -69,7 +69,7 @@ redis.port=40341
 redis.timeoutSeconds=30
 redis.password=J9Gpv4fA
 ##aliyun mq
-aliyun.mq.default.topic=主题名称
+aliyun.mq.default.topic=\u4E3B\u9898\u540D\u79F0
 aliyun.mq.default.onsAddr=http://onsaddr-internet.aliyun.com/rocketmq/nsaddr4client-internet    
 aliyun.mq.default.producerId=PID
 aliyun.mq.default.consumerId=CID
@@ -85,31 +85,31 @@ alipay.mobile.RSA_PRIVATE_KEY=
 alipay.mobile.ALIPAY_PUBLIC_KEY=
 ##aliyun oss
 #iamges
-aliyun.oss.images.key=分配到该OSS的用户的key(accessKey)
-aliyun.oss.images.secret=分配到该OSS的用户的secret
+aliyun.oss.images.key=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684key(accessKey)
+aliyun.oss.images.secret=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684secret
 aliyun.oss.images.bucketName=abc
 aliyun.oss.images.endPoint=http://oss-cn-hangzhou.aliyuncs.com
 #internal
-aliyun.oss.internal.key=分配到该OSS的用户的key(accessKey)
-aliyun.oss.internal.secret=分配到该OSS的用户的secret
+aliyun.oss.internal.key=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684key(accessKey)
+aliyun.oss.internal.secret=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684secret
 aliyun.oss.internal.bucketName=abc
 aliyun.oss.internal.endPoint=http://oss-cn-hangzhou.aliyuncs.com
 #public
-aliyun.oss.public.key=分配到该OSS的用户的key(accessKey)
-aliyun.oss.public.secret=分配到该OSS的用户的secret
+aliyun.oss.public.key=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684key(accessKey)
+aliyun.oss.public.secret=\u5206\u914D\u5230\u8BE5OSS\u7684\u7528\u6237\u7684secret
 aliyun.oss.public.bucketName=abc
 aliyun.oss.public.endPoint=http://oss-cn-hangzhou.aliyuncs.com
 ##aliyun sms
-aliyun.sms.key=分配到该短信服务的用户的key(accessKey)
-aliyun.sms.secret=分配到该短信服务的用户的secret
-aliyun.sms.signName=短信模板签名
-aliyun.sms.templates.findPassword=找回密码短信的模板ID
-aliyun.sms.templates.login=登录短信的模板ID
-aliyun.sms.templates.register=注册短信的模板ID
-aliyun.sms.templates.resetPayPassword=重置支付密码短信的模板ID
-aliyun.sms.templates.generalCaptcha=通用验证码短信的模板ID
+aliyun.sms.key=\u5206\u914D\u5230\u8BE5\u77ED\u4FE1\u670D\u52A1\u7684\u7528\u6237\u7684key(accessKey)
+aliyun.sms.secret=\u5206\u914D\u5230\u8BE5\u77ED\u4FE1\u670D\u52A1\u7684\u7528\u6237\u7684secret
+aliyun.sms.signName=\u77ED\u4FE1\u6A21\u677F\u7B7E\u540D
+aliyun.sms.templates.findPassword=\u627E\u56DE\u5BC6\u7801\u77ED\u4FE1\u7684\u6A21\u677FID
+aliyun.sms.templates.login=\u767B\u5F55\u77ED\u4FE1\u7684\u6A21\u677FID
+aliyun.sms.templates.register=\u6CE8\u518C\u77ED\u4FE1\u7684\u6A21\u677FID
+aliyun.sms.templates.resetPayPassword=\u91CD\u7F6E\u652F\u4ED8\u5BC6\u7801\u77ED\u4FE1\u7684\u6A21\u677FID
+aliyun.sms.templates.generalCaptcha=\u901A\u7528\u9A8C\u8BC1\u7801\u77ED\u4FE1\u7684\u6A21\u677FID
 ##unionpay
-unionpay.merId=商户号
+unionpay.merId=\u5546\u6237\u53F7
 unionpay.frontReturnUrl=https://www.yourdomain.com/app/unionpay/front-return
 unionpay.backNotifyUrl=https://www.yourdomain.com/app/unionpay/back-notify
 unionpay.isEncrypted=false
@@ -124,9 +124,9 @@ acpsdk.appTransUrl=https://gateway.test.95516.com/gateway/api/appTransReq.do
 acpsdk.cardTransUrl=https://gateway.test.95516.com/gateway/api/cardTransReq.do
 acpsdk.version=5.1.0
 acpsdk.signMethod=01
-# 是否验证验签证书的CN，测试环境请设置false，生产环境请设置true。非false的值默认都当true处理。
+# \u662F\u5426\u9A8C\u8BC1\u9A8C\u7B7E\u8BC1\u4E66\u7684CN\uFF0C\u6D4B\u8BD5\u73AF\u5883\u8BF7\u8BBE\u7F6Efalse\uFF0C\u751F\u4EA7\u73AF\u5883\u8BF7\u8BBE\u7F6Etrue\u3002\u975Efalse\u7684\u503C\u9ED8\u8BA4\u90FD\u5F53true\u5904\u7406\u3002
 acpsdk.ifValidateCNName=false
-# 是否验证https证书，测试环境请设置false，生产环境建议优先尝试true，不行再false。非true的值默认都当false处理。
+# \u662F\u5426\u9A8C\u8BC1https\u8BC1\u4E66\uFF0C\u6D4B\u8BD5\u73AF\u5883\u8BF7\u8BBE\u7F6Efalse\uFF0C\u751F\u4EA7\u73AF\u5883\u5EFA\u8BAE\u4F18\u5148\u5C1D\u8BD5true\uFF0C\u4E0D\u884C\u518Dfalse\u3002\u975Etrue\u7684\u503C\u9ED8\u8BA4\u90FD\u5F53false\u5904\u7406\u3002
 acpsdk.ifValidateRemoteCert=false
 acpsdk.signCert.path=F:/unionpay-test-certs/acp_test_sign.pfx
 acpsdk.encryptCert.path=F:/unionpay-test-certs/acp_test_enc.cer
