--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -58,16 +58,16 @@ applet.pay.demo.clientIp=127.0.0.1
 applet.pay.demo.httpConnectTimeoutMs=30000
 applet.pay.demo.httpReadTimeoutMs=30000
 ##mogodb
-mongo.address=47.96.19.106
+mongo.address=127.0.0.1
 mongo.port=27017
 mongo.database=admin
 mongo.username=root
-mongo.password=JT5231QjHSrt
+mongo.password=password
 ##redis
-redis.address=47.96.19.106
+redis.address=127.0.0.1
 redis.port=40341
 redis.timeoutSeconds=30
-redis.password=J9Gpv4fA
+redis.password=password
 ##aliyun mq
 aliyun.mq.default.topic=\u4E3B\u9898\u540D\u79F0
 aliyun.mq.default.onsAddr=http://onsaddr-internet.aliyun.com/rocketmq/nsaddr4client-internet    
