--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -19,11 +19,12 @@ app.sms.registerLimit=5
 app.sms.loginLimit=5
 app.sms.resetPasswordLimit=5
 app.sms.resetPayPasswordLimit=5
+app.fileLogPath=D://_yilianshe/log/
 ##hibernate
 hibernate.connection.driverClass=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=false
+hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=true
 hibernate.connection.username=root
-hibernate.connection.password=111111
+hibernate.connection.password=123456
 hibernate.connection.poolSize=5
 hibernate.jdbc.fetchSize=50
 hibernate.jdbc.batchSize=23
