modify hibernate config and datasource

--- a/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/app.properties
@@ -25,7 +25,11 @@ hibernate.connection.driverClass=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/jframe?characterEncoding=utf8&amp;useSSL=true
 hibernate.connection.username=root
 hibernate.connection.password=123456
-hibernate.connection.poolSize=5
+connection.provider_class=org.hibernate.c3p0.internal.C3P0ConnectionProvider
+hibernate.c3p0.max_size=20
+hibernate.c3p0.min_size=5
+hibernate.c3p0.timeout=120
+hibernate.c3p0.max_statements=100
 hibernate.jdbc.fetchSize=50
 hibernate.jdbc.batchSize=23
 hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
