--- a/99.jframe-web-main/src/main/webapp/WEB-INF/web.xml
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,8 @@
     <filter-mapping>
         <filter-name>xssSpringFilter</filter-name>
         <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
 
 </web-app>
